Sideway overflow fix

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -16,7 +16,7 @@
   grid-template-areas:
     'aside header'
     'aside main';
-  grid-template-columns: 1fr 4fr;
+  grid-template-columns: 1fr minmax(0, 4fr);
   grid-template-rows: 70px minmax(0, 1fr);
   height: 100vh;
   color: var(--text-on-p);
